force-app/main/default/objects/Inventory_Assignment__c/Inventory_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage and track inventory assignments made to brokers in the Broker Portal. It stores the relationship between brokers and assigned inventory units/properties based on business rules, sales performance, availability, or Agentforce-driven recommendations.

The object helps control which inventory records are visible and accessible to brokers in the Experience Cloud portal. It also maintains assignment status, priority, assignment dates, and other operational details for inventory distribution and tracking.</description>
    <label>Inventory Assignment</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Inventory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>