force-app/main/default/objects/Inventory_Assignment__c/fields/Agent_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Run_Id__c</fullName>
    <label>Agent Run Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>