force-app/main/default/objects/Inventory_Assignment__c/fields/Assignment_Source__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Source__c</fullName>
    <label>Assignment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>