force-app/main/default/objects/Inventory_Assignment__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Broker_Inventory_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>