force-app/main/default/objects/Inventory_Assignment__c/fields/Pre_Sales_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Score__c</fullName>
    <label>Pre Sales Performance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>