force-app/main/default/objects/Inventory_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Inventory Assignments</relationshipLabel>
    <relationshipName>Broker_Inventory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>