force-app/main/default/objects/Inventory_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Broker__c</columns>
    <columns>Unit__c</columns>
    <columns>Project__c</columns>
    <columns>Assignment_Date__c</columns>
    <columns>Assignment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>